--- a/1.html
+++ b/1.html
@@ -7,6 +7,6 @@
 </style>
 </head>
 	<frameset rows="15%,*" border="0">
-	<frame src="main.html"   noresize="noresize" scrolling="no">
+	<frame src="index.html"   noresize="noresize" scrolling="no">
 	<frame src="person.php" name="content">
 </html>
