--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		    <br/>
 		    <input type="password" name="密码" placeholder="请输入密码" class="pass">
 		    <br/>
-		    <input type="submit"  value="登陆" style="margin-left:40px;">
-		    <a href="login.html" style="margin-left:20px;"> 马上注册</a>
+		    <input type="submit"  value="登陆" style="margin-left:40px;" class="font">
+		    <a href="login.html" style="margin-left:20px;" class="font"> 马上注册</a>
 		  	</form>
 		  </div>
 		 
